--- a/app/views/dashboard/index.hbs
+++ b/app/views/dashboard/index.hbs
@@ -128,6 +128,14 @@
                     </div>
                 {{/if}}
                 
+                <div class="col-md-6 shadow bg-white border rounded stats-box">
+                    <div id="chartTransacoes" style="width:100%; height:600px;" data-hint="Gráfico de linhas que mostra os totais de transações feitas por mês."></div>
+                </div>
+
+                <div class="col-md-4 shadow bg-white border rounded stats-box">
+                    <div id="colTransacoesValores" style="width:100%; height:600px;" data-hint="Gráfico de barras que mostra o valor total monetário por mês."></div>
+                </div>
+
             </div>
 
             {{> _graficosIndex}}
