Feito algumas alterações para preparar para o teste da ferramenta

--- a/app/views/layout/_header.hbs
+++ b/app/views/layout/_header.hbs
@@ -35,17 +35,17 @@
                                             <a class="dropdown-item" href="/dashboard/novo">Cadastrar novo app</a>
                                             <a class="dropdown-item" href="/dashboard/editar">Editar app selecionado</a> --}}
                                             <a class="dropdown-item" id="ver-tour" href="#">Ver tour</a>
-                                            <a class="dropdown-item" href="/usuarios/logout">Log-out</a>
+                                            {{!-- <a class="dropdown-item" href="/usuarios/logout">Log-out</a> --}}
                                         </div>
                                     </div>
                                 </li>
                             {{else}}
-                                <li class="nav-item">
+                                {{!-- <li class="nav-item">
                                     <a class="nav-link" href="/usuarios/cadastro">Sign-up</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="/usuarios/login">Log-in</a>
-                                </li>
+                                </li> --}}
                             {{/if}}
                         </ul>
                     </div>
