--- a/app/views/home/case.hbs
+++ b/app/views/home/case.hbs
@@ -2,14 +2,16 @@
     <main role="main" class="container">
         <div class="card bg-light mb-3 mx-auto shadow form-box">
             <div class="card-header text-center">
-                <h1>Login</h1>
+                <h1>Bem-vindo</h1>
             </div>
             <div class="card-body">
                 <form action="/usuarios/login" method="post">
+                    <input type="hidden" name="email" value="g_machado1@hotmail.com">
+                    <input type="hidden" name="senha" value="qweqwe">
                     
                     <p>Eletrox, pequena loja de eletrônicos, lançou seu aplicativo mobile em 2017, um ano após ter começado a operar. Fernando, dono da Eletrox, via nesse app as promessas que são sempre feitas, alavancar seu negócio de vendas e obter mais clientes. Porém Fernando não utilizou uma ferramenta analytics, conseguiu um pequeno aumento nas vendas aplicando inúmeras estratégias sem saber se realmente estavam funcionando, se agradavam seus clientes do e-commerce, até mesmo sem saber quem eram seus clientes. No começo de 2018, começou a utilizar a ferramenta Applytics por sugestão de um amigo também presente no mercado de aplicativos. Se coloque no lugar de Fernando e veja os dados obtidos pela ferramenta em 2018.</p>
                     
-                    <a href="https://goo.gl/forms/sSTjYwqfAkQIyzbs1">Formulário</a>
+                    <p>Após realizo o teste da ferramenta por favor considere avalia-la através do seguinte <a href="https://goo.gl/forms/sSTjYwqfAkQIyzbs1">questionário</a></p>
 
                     <input type="submit" value="Entrar" class="btn btn-primary">
                 </form>
