Alterado nomes de mês e semana nos eixos dos gráficos
e desativado e legendas nos gráficos que não precisavam

--- a/app/views/layout/_graficosIndex.hbs
+++ b/app/views/layout/_graficosIndex.hbs
@@ -34,7 +34,7 @@
             }
         },
         xAxis: {
-            categories: ['Janeiro', 'Fevereiro', 'Março', 'Abril', 'Maio', 'Junho', 'Julho', 'Agosto', 'Setembro', 'Outubro', 'Novembro', 'Dezembro']
+            categories: ['Jan', 'Fev', 'Mar', 'Abr', 'Mai', 'Jun', 'Jul', 'Ago', 'Set', 'Out', 'Nov', 'Dez']
         },
         legend: {
             align: 'center',
@@ -103,6 +103,7 @@
             crosshair: true
         },
         legend: {
+            enabled: false,
             align: 'center',
             verticalAlign: 'top'
         },
@@ -199,9 +200,10 @@
             }
         },
         xAxis: {
-            categories: ['Janeiro', 'Fevereiro', 'Março', 'Abril', 'Maio', 'Junho', 'Julho', 'Agosto', 'Setembro', 'Outubro', 'Novembro', 'Dezembro']
+            categories: ['Jan', 'Fev', 'Mar', 'Abr', 'Mai', 'Jun', 'Jul', 'Ago', 'Set', 'Out', 'Nov', 'Dez']
         },
         legend: {
+            enabled: false,
             align: 'center',
             verticalAlign: 'top'
         },
@@ -227,9 +229,10 @@
             }
         },
         xAxis: {
-            categories: ['Janeiro', 'Fevereiro', 'Março', 'Abril', 'Maio', 'Junho', 'Julho', 'Agosto', 'Setembro', 'Outubro', 'Novembro', 'Dezembro']
+            categories: ['Jan', 'Fev', 'Mar', 'Abr', 'Mai', 'Jun', 'Jul', 'Ago', 'Set', 'Out', 'Nov', 'Dez']
         },
         legend: {
+            enabled: false,
             align: 'center',
             verticalAlign: 'top'
         },
@@ -261,6 +264,7 @@
                 opposite: true
             }],
             legend: {
+                enabled: false,
                 align: 'center',
                 verticalAlign: 'top'
             },
@@ -299,7 +303,7 @@
                 text: 'Acessos por hora do dia'
             },
             xAxis: {
-                categories: ['Domingo', 'Segunda', 'Terça', 'Quarta', 'Quinta', 'Sexta', 'Sábado']
+                categories: ['Dom', 'Seg', 'Ter', 'Qua', 'Qui', 'Sex', 'Sáb']
             },
 
             yAxis: {
