--- a/app/views/dashboard/usuarios.hbs
+++ b/app/views/dashboard/usuarios.hbs
@@ -110,11 +110,11 @@
             'overlayOpacity': 0.9
         });
 
-        {{#if (is_equal usuarioLogado.nivel 'Iniciante') }}
+        {{!-- {{#if (is_equal usuarioLogado.nivel 'Iniciante') }} --}}
             {{#if usuarioNovo }}
                 intro.start();
             {{/if}}
-        {{/if}}
+        {{!-- {{/if}} --}}
 
         document.getElementById('ver-tour').addEventListener('click', () => {
             intro.start();
@@ -230,12 +230,12 @@
                     {{/each}}
                 ],
                 "initComplete": function(settings, json) {
-                    {{#if (is_equal usuarioLogado.nivel 'Iniciante') }}
+                    {{!-- {{#if (is_equal usuarioLogado.nivel 'Iniciante') }} --}}
                         introJs().setOptions({
                             'hintButtonLabel': '',
                             'hintPosition': 'top-left'
                         }).addHints();
-                    {{/if}}
+                    {{!-- {{/if}} --}}
                 }
             });
         });
