Alterado de 'crashes' para travamentos

--- a/app/views/dashboard/crashes.hbs
+++ b/app/views/dashboard/crashes.hbs
@@ -5,7 +5,7 @@
 
         <nav class="nav nav-pills nav-fill justify-content-around mt-5">
             <a class="nav-link" href="/dashboard">Dados gerais</a>
-            <a class="nav-link active" href="/dashboard/crashes">Crashes</a>
+            <a class="nav-link active" href="/dashboard/crashes">Travamentos</a>
             <a class="nav-link" href="/dashboard/usuarios">Usuarios</a>
         </nav>
 
@@ -13,7 +13,7 @@
 
         <div class="row justify-content-around" data-intro="Aqui é mostrado uma tabela com todos os erros e informações gravadas no seu app." data-scrollTo="tooltip">
             <div class="col-md-11 shadow bg-white border rounded stats-box">
-                <h2 class="text-center">Tabela de travamento do app</h2>
+                <h2 class="text-center">Tabela de travamentos do app</h2>
 
                 <table id="crashes" class="table table-striped responsive table-bordered" width="100%" data-hint="Cada linha da tabela é um erro que ocorreu com um usuário, especificado pelo ID usuário. Além das informações do dispositivo no momento atual do erro, existe uma coluna Stack-trace, onde é detalhado o erro que ocorreu e em qual parte do código do app.">
                     <thead>
