--- a/app/views/dashboard/index.hbs
+++ b/app/views/dashboard/index.hbs
@@ -10,7 +10,7 @@
         {{else}}
             <nav class="nav nav-pills nav-fill justify-content-around mt-5">
                 <a class="nav-link active" href="/dashboard" data-intro="Bem vindo! A seguir será apresentado as funções da dashboard">Dados gerais</a>
-                <a class="nav-link" href="/dashboard/crashes">Crashes</a>
+                <a class="nav-link" href="/dashboard/crashes">Travamentos</a>
                 <a class="nav-link" href="/dashboard/usuarios">Usuarios</a>
             </nav>
 
