--- a/app/views/dashboard/usuarios.hbs
+++ b/app/views/dashboard/usuarios.hbs
@@ -5,7 +5,7 @@
 
         <nav class="nav nav-pills nav-fill justify-content-around mt-5">
             <a class="nav-link" href="/dashboard">Dados gerais</a>
-            <a class="nav-link" href="/dashboard/crashes">Crashes</a>
+            <a class="nav-link" href="/dashboard/crashes">Travamentos</a>
             <a class="nav-link active" href="/dashboard/usuarios">Usuarios</a>
         </nav>
 
