--- a/app/views/home/case.hbs
+++ b/app/views/home/case.hbs
@@ -6,7 +6,7 @@
             </div>
             <div class="card-body">
                 <form action="/usuarios/login" method="post">
-                    <input type="hidden" name="email" value="g_machado1@hotmail.com">
+                    <input type="hidden" name="email" value="teste@hotmail.com">
                     <input type="hidden" name="senha" value="qweqwe">
                     
                     <p>Eletrox, pequena loja de eletrônicos, lançou seu aplicativo mobile em 2017, um ano após ter começado a operar. Fernando, dono da Eletrox, via nesse app as promessas que são sempre feitas, alavancar seu negócio de vendas e obter mais clientes. Porém Fernando não utilizou uma ferramenta analytics, conseguiu um pequeno aumento nas vendas aplicando inúmeras estratégias sem saber se realmente estavam funcionando, se agradavam seus clientes do e-commerce, até mesmo sem saber quem eram seus clientes. No começo de 2018, começou a utilizar a ferramenta Applytics por sugestão de um amigo também presente no mercado de aplicativos. Se coloque no lugar de Fernando e veja os dados obtidos pela ferramenta em 2018.</p>
