Feito alterações e ajustes nos textos de ajuda

--- a/app/views/dashboard/index.hbs
+++ b/app/views/dashboard/index.hbs
@@ -1,5 +1,5 @@
 {{> _header}}
-
+    <div style="width: 1px; height: 1px;" class="mx-auto" data-intro="Bem vindo! Esse é um guia rápido que irá ajudar você a se familiarizar com a ferramenta. Aqui será apresentado a página principal dela, onde os dados mais importantes estão."></div>
     <main role="main" class="container-fluid">
 
         {{> _mensagens}}
@@ -8,15 +8,15 @@
             <p>A chave SDK para realizar a integração com o app é: <strong>{{ appID }}</strong>.</p>
             <p>Integre o SDK no seu app e atualize essa página quando tiver usado pelo menos uma vez seu app para ver os dados.</p>
         {{else}}
-            <nav class="nav nav-pills nav-fill justify-content-around mt-5">
-                <a class="nav-link active" href="/dashboard" data-intro="Bem vindo! A seguir será apresentado as funções da dashboard">Dados gerais</a>
+            <nav class="nav nav-pills nav-fill justify-content-around mt-5" data-intro="Nesses botões você consegue navegar pelas páginas da ferramenta.">
+                <a class="nav-link active" href="/dashboard">Dados gerais</a>
                 <a class="nav-link" href="/dashboard/crashes">Travamentos</a>
                 <a class="nav-link" href="/dashboard/usuarios">Usuarios</a>
             </nav>
 
             <hr>
 
-            <div class="row justify-content-between" data-intro="Aqui é mostrado um slide com os dados rápidos e importantes para seu app">
+            <div class="row justify-content-between" data-intro="Aqui é mostrado um slide com métricas importantes, como totais e médias, para avaliar o desempenho do seu app.">
                 <div class="col-md-12">
                     <ul class="stats-slider">
                         <li>
@@ -54,7 +54,7 @@
             </div>
             
             <div class="row justify-content-around">
-                <div class="shadow bg-white border rounded col-md-3 stats-box" data-intro="Aqui são mostrado dados sobre os usuários que utilizam o app">
+                <div class="shadow bg-white border rounded col-md-3 stats-box" data-intro="Aqui são mostrado dados sobre os usuários que utilizam o app.">
                     <p>Usuários ativos nas ultimas 24h <strong>{{ dados.stats.num_usuarios_dia }}</strong></p>
                     <div class="progress">
                         <div class="progress-bar" style="width: {{ dados.porcentagens.num_usuarios_dia }}%" role="progressbar" aria-valuenow="{{ dados.stats.num_usuarios_dia }}" aria-valuemin="0" aria-valuemax="{{ dados.stats.num_usuarios_totais }}"></div>
@@ -81,15 +81,15 @@
                     </div>
                 </div>
 
-                <div class="col-md-4 shadow bg-white border rounded stats-box">
-                    <div id="pieResolucoes" style="width:100%; height:300px;" data-hint="Gráfico de pizza que mostra a quantidade de usuários por resolução da tela do dispositivo que utiliza o app"></div>
+                <div class="col-md-4 shadow bg-white border rounded stats-box" data-intro="Este é um dos vários gráficos que a ferramenta fornece. Os gráficos são iterativos se passar o mouse em cima ou clicar, fornecendo um detalhamento maior. No canto superior esquerdo dos gráficos tem um circulo piscando, clique nele para obter mais informações sobre o gráfico. No canto superior direito tem um menu que fornece opções para salvar as informações apresentadas.">
+                    <div id="pieResolucoes" style="width:100%; height:300px;" data-hint="Gráfico de pizza que mostra a quantidade de usuários por resolução da tela do dispositivo que utiliza o app. Dado que pode ser importante para você ter ideia de como seus usuários estão realmente visualizando seu app."></div>
                 </div>
 
                 <div class="col-md-4 shadow bg-white border rounded stats-box">
-                    <div id="pieViewsAcessos" style="width:100%; height:300px;" data-hint="Gráfico de pizza que mostrada a quantidade de acessos em cada tela do seu app (são considerados múltiplos acessos por usuário)"></div>
+                    <div id="pieViewsAcessos" style="width:100%; height:300px;" data-hint="Gráfico de pizza que mostrada a quantidade de acessos em cada tela do seu app (são considerados múltiplos acessos por usuário). Com isso você pode analisar qual da suas páginas estão recebendo menos ou mais atenção."></div>
                 </div>
 
-                <div class="shadow bg-white border rounded col-md-3 stats-box" data-intro="Aqui são mostrado mais alguns dados, incluindo dados monetários (se tiver)">
+                <div class="shadow bg-white border rounded col-md-3 stats-box" data-scrollTo="tooltip" data-intro="Aqui são mostrado alguns dados que detalham o uso pelos usuários e dados monetários (se existirem).">
                     <p>Tempo total de uso do app em segundos <strong>{{ dados.stats.tempo_total_sessoes }}s</strong></p>
                     <p>Tempo médio de uso do app por usuário <strong>{{ dados.stats.media_tempo_total }}s</strong></p>
                     <p>Desvio padrão do tempo total de uso do app <strong>{{ dados.stats.desvio_tempo_total }}s</strong></p>
@@ -98,42 +98,42 @@
                 </div>
 
                 <div class="col-md-7 shadow bg-white border rounded stats-box">
-                    <div id="colIdades" style="width:100%; height:400px;" data-hint="Gráfico de barras que mostra a quantidade de usuários por idade"></div>
+                    <div id="colIdades" style="width:100%; height:400px;" data-hint="Gráfico de barras que mostra a quantidade de usuários por idade para poder conhecer melhor seus usuários"></div>
                 </div>
 
                 <div class="col-md-{{#if (is_equal usuarioLogado.nivel 'Avançado') }}6{{else}}11{{/if}} shadow bg-white border rounded stats-box">
-                    <div id="chartUsuarios" style="width:100%; height:400px;" data-hint="Gráfico de linhas que mostra a quantidade de usuários que foram visto pela primeira vez e pela última vez nos meses"></div>
+                    <div id="chartUsuarios" style="width:100%; height:400px;" data-hint="Gráfico de linhas que mostra a quantidade de usuários que foram visto pela primeira vez e pela última vez nos meses. Os marcados como primeira vez se referenciam à usuários novos, enquanto os pela última vez podem ser usuários que desinstalaram o app ou só deram uma pausa, geralmente possível diferenciar analisando a quantidade de meses inativos."></div>
                     
                 </div>
 
                 {{#if (is_equal usuarioLogado.nivel 'Avançado') }}
                     <div class="col-md-4 shadow bg-white border rounded stats-box">
-                        <div id="histTempoSessao" style="width:100%; height:400px;" data-hint="Histograma que mostra por meio de grupos de usuários o tempo médio de sessão. Os pontos são usuários individuais, x é o seu número e y o tempo médio de sessão. As barras são os grupos, x é o tempo médio e y é a quantidade de usuários"></div>
+                        <div id="histTempoSessao" style="width:100%; height:400px;" data-hint="Histograma que mostra por meio de grupos de usuários o tempo médio de sessão. As barras são os grupos, o eixo x é o tempo médio e o eixo y é a quantidade de usuários. Por meio desse gráfico você consegue analisar como a maior parte dos seus usuários interagem com seu app."></div>
                     </div>
                 {{/if}}
 
                 <div class="col-md-11 shadow bg-white border rounded stats-box">
-                    <div id="mapaDist" style="width:100%; height:600px;" data-hint="Mapa que mostra a quantidade de usuários em cada país"></div>
+                    <div id="mapaDist" style="width:100%; height:600px;" data-hint="Mapa que mostra a quantidade de usuários em cada país."></div>
                 </div>
 
                 {{#if (is_equal usuarioLogado.nivel 'Avançado') }}
                     <div class="col-md-5 shadow bg-white border rounded stats-box">
-                        <div id="heatMapAcessos" style="width:100%; height:600px;" data-hint="Mapa de calor que mostra sessões iniciadas a cada hora dos dias da semana. Quanto mais escuro, mais acessos)."></div>
+                        <div id="heatMapAcessos" style="width:100%; height:600px;" data-hint="Mapa de calor que mostra sessões iniciadas a cada hora dos dias da semana (Quanto mais escuro, mais acessos). Por meio da análise desse gráfico você pode planejar quando é a melhor hora para dar promoções ou anúncios importantes para seus usuários."></div>
                     </div>
                 {{/if}}
 
                 {{#if (is_equal usuarioLogado.nivel 'Avançado') }}
                     <div class="col-md-5 shadow bg-white border rounded stats-box">
-                        <div id="boxPlotDuracao" style="width:100%; height:600px;" data-hint="Box plot dos dados de tempo de sessão total dos usuários no app."></div>
+                        <div id="boxPlotDuracao" style="width:100%; height:600px;" data-hint="Box plot dos dados de tempo de sessão total dos usuários no app divididos por grupos de idades. A análise desse gráfico pode lhe fornecer uma ideia de como cada faixa etária dos seus usuários interagem com seu app."></div>
                     </div>
                 {{/if}}
                 
                 <div class="col-md-6 shadow bg-white border rounded stats-box">
-                    <div id="chartTransacoes" style="width:100%; height:600px;" data-hint="Gráfico de linhas que mostra os totais de transações feitas por mês."></div>
+                    <div id="chartTransacoes" style="width:100%; height:600px;" data-hint="Gráfico de linhas que mostra os totais de transações feitas por mês. Importante sempre se atentar para os pontos de picos para poder analisar qual estratégia deu certo ou não."></div>
                 </div>
 
                 <div class="col-md-4 shadow bg-white border rounded stats-box">
-                    <div id="colTransacoesValores" style="width:100%; height:600px;" data-hint="Gráfico de barras que mostra o valor total monetário por mês."></div>
+                    <div id="colTransacoesValores" style="width:100%; height:600px;" data-hint="Gráfico de barras que mostra o valor total monetário por mês. Geralmente cresce de acordo com o gráfico anterior."></div>
                 </div>
 
             </div>
