--- a/app/views/dashboard/crashes.hbs
+++ b/app/views/dashboard/crashes.hbs
@@ -1,7 +1,7 @@
 {{> _header}}
 
     <main role="main" class="container">
-        <h1 class="text-center" data-intro="Essa página é dedicada para mostrar informações sobre os travamentos que ocorrem com os usuários, informações importantes para poder melhorar seu app!">Crashes</h1>
+        <h1 class="text-center" data-intro="Essa página é dedicada para mostrar informações sobre os travamentos que ocorrem com os usuários, útil para poder verificar e corrigir os erros existentes o mais rápido possível.">Travamentos</h1>
 
         <nav class="nav nav-pills nav-fill justify-content-around mt-5">
             <a class="nav-link" href="/dashboard">Dados gerais</a>
@@ -11,7 +11,7 @@
 
         <hr>
 
-        <div class="row justify-content-around" data-intro="Aqui é mostrado uma tabela com todos os erros e informações gravadas no seu app." data-scrollTo="tooltip">
+        <div class="row justify-content-around" data-intro="Aqui é mostrado uma tabela com todos os erros e informações gravadas quando o erro ocorreu no seu app. No canto superior esquerdo está o botão com dicas e mais informações sobre essa tabela." data-scrollTo="tooltip">
             <div class="col-md-11 shadow bg-white border rounded stats-box">
                 <h2 class="text-center">Tabela de travamentos do app</h2>
 
@@ -57,7 +57,7 @@
             </div>
         </div>
 
-        <div class="row justify-content-around" data-intro="Aqui temos os gráficos para melhor visualizar as informações obtidas. No canto superior direito existe um menu com opções para imprimir ou baixar em uma variedade de formatos o gráfico. No canto superior esquerdo existe um botão com dicas e explicações para cada gráfico" data-scrollTo="tooltip">
+        <div class="row justify-content-around" data-intro="Aqui é mostrado um gráfico para melhor visualizar as informações de travamentos obtidas." data-scrollTo="tooltip">
             <div class="col-md-11 shadow bg-white border rounded stats-box">
                 <div id="chartCrashes" style="width:100%; height:400px;" data-hint="Gráfico de barras que mostram a quantidade de erros, divididos em duas categorias, por mês. Erros tratados são os erros que seu app foi implementado para executar alguma ação para tentar remediar o ocorrido."></div>
             </div>
