--- a/app/views/dashboard/usuarios.hbs
+++ b/app/views/dashboard/usuarios.hbs
@@ -1,7 +1,7 @@
 {{> _header}}
 
     <main role="main" class="container">
-        <h1 class="text-center" data-intro="Essa página fornece informações mais aprofundadas dos usuários do app.">Usuários</h1>
+        <h1 class="text-center" data-intro="Essa página fornece informações mais aprofundadas dos usuários do seu app. Informações que possam ser úteis para traçar o perfil dos seus usuários.">Usuários</h1>
 
         <nav class="nav nav-pills nav-fill justify-content-around mt-5">
             <a class="nav-link" href="/dashboard">Dados gerais</a>
@@ -11,11 +11,11 @@
 
         <hr>
 
-        <div class="row justify-content-around" data-intro="Aqui são mostrado tabelas que fornecem mais informações sobre cada usuário que já utilizou seu app." data-scrollTo="tooltip">
+        <div class="row justify-content-around" data-intro="Aqui são mostrado tabelas que fornecem mais informações sobre cada usuário que já utilizou seu app. Por questão de privacidade com seus usuários, usamos um ID gerado pela ferramenta para identificar seus usuários." data-scrollTo="tooltip">
             <div class="col-md-11 shadow bg-white border rounded stats-box">
                 <h2 class="text-center">Tabela de usuários do app</h2>
 
-                <table id="usuarios" class="table table-striped responsive table-bordered" width="100%" data-hint="Cada linha é um usuário, O ID é o identificador usado pelo nosso sistema para referenciar a esse usuário.">
+                <table id="usuarios" class="table table-striped responsive table-bordered" width="100%" data-hint="Cada linha é um usuário, O ID é o identificador usado pela nossa ferramenta para referenciar a esse usuário. Um relatório de todas as informações está disponível se clicar no botão + ao lado do ID.">
                     <thead>
                         <tr>
                             <th>ID</th>
