Feito alterações no texto de caso introdutório

--- a/app/views/home/case.hbs
+++ b/app/views/home/case.hbs
@@ -9,11 +9,11 @@
                     <input type="hidden" name="email" value="teste@hotmail.com">
                     <input type="hidden" name="senha" value="qweqwe">
                     
-                    <p>Eletrox, pequena loja de eletrônicos, lançou seu aplicativo mobile em 2017, um ano após ter começado a operar. Fernando, dono da Eletrox, via nesse app as promessas que são sempre feitas, alavancar seu negócio de vendas e obter mais clientes. Porém Fernando não utilizou uma ferramenta analytics, conseguiu um pequeno aumento nas vendas aplicando inúmeras estratégias sem saber se realmente estavam funcionando, se agradavam seus clientes do e-commerce, até mesmo sem saber quem eram seus clientes. No começo de 2018, começou a utilizar a ferramenta Applytics por sugestão de um amigo também presente no mercado de aplicativos. Se coloque no lugar de Fernando e veja os dados obtidos pela ferramenta em 2018.</p>
+                    <p>Considere o caso fictício a seguir e teste a ferramenta avaliando os dados obtidos do caso até o final de 2018.</p>
 
-                    <p>Para o teste a seguir considere que você está analisando os dados da Eletrox obtidos no ano de 2018 inteiro.</p>
+                    <p><q>Eletrox, pequena loja de eletrônicos, lançou seu aplicativo mobile em 2017, um ano após ter começado a operar. Fernando, dono da Eletrox, via nesse app as promessas que são sempre feitas, alavancar seu negócio de vendas e obter mais clientes. Porém Fernando não utilizou uma ferramenta analytics, conseguiu um pequeno aumento nas vendas aplicando inúmeras estratégias sem saber se realmente estavam funcionando, se agradavam seus clientes do e-commerce, até mesmo sem saber quem eram seus clientes. No começo de 2018, começou a utilizar a ferramenta Applytics por sugestão de um amigo também presente no mercado de aplicativos.</q></p>
                     
-                    <p>Após realizado o teste da ferramenta por favor considere avalia-la através do seguinte <a href="https://goo.gl/forms/sSTjYwqfAkQIyzbs1">questionário</a>.</p>
+                    <p>Após realizado o teste da ferramenta por favor não esqueça de avalia-la através do seguinte <a href="https://goo.gl/forms/sSTjYwqfAkQIyzbs1">questionário</a>.</p>
 
                     <input type="submit" value="Entrar" class="btn btn-primary">
                 </form>
